<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/money_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/all_money_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:background="@drawable/left_yellow_button"
            android:text="@string/all"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/income_money_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:background="@drawable/center_yellow_button"
            android:text="@string/income"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/outcome_money_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:background="@drawable/right_yellow_button"
            android:text="@string/outcome"
            android:textColor="@color/white"/>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_margin="5dp"
        android:id="@+id/money_rec_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>