<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_balck_arrow"/>

            <ImageView
                android:padding="5dp"
                android:id="@+id/chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_black_chart"/>

            <LinearLayout
                android:layout_toRightOf="@id/chart"
                android:layout_toEndOf="@id/chart"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textStyle="bold|italic"
                    android:textSize="25sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/summery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:text="@string/summery_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>-->

        <LinearLayout
            android:background="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/net_income"
                android:layout_marginEnd="2.5dp"
                android:layout_marginRight="2.5dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green">

                <TextView
                    android:textSize="20sp"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/net_income_value"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/net_outcome"
                android:layout_marginStart="2.5dp"
                android:layout_marginLeft="2.5dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red">

                <TextView
                    android:textSize="20sp"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/outcome"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/net_outcome_value"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/zero"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:background="@color/colorPrimary"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:text="@string/credit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/net_credit"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:text="@string/zero"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>